Clean up code structure and remove dead code
- Replace System.exit in StopServlet with a graceful shutdown callback wired from MonitorServer
- Split MonitorServer start/join and share a single JvmAttacher across servlets
- Return String from JvmAttacher.createThreadDump and let the servlet own the response encoding
- Validate the pid parameter with 400 Bad Request in JstackServlet
- Replace SimpleDateFormat with a shared DateTimeFormatter
- Define route paths as constants used by both registration and links
- Inline RandomNumberGenernator with ThreadLocalRandom and delete it with its test
- Delete dead SigarTest and drop the commons-io test dependency
- Simplify HTML rendering with text blocks and add real assertions to JpsServletTest

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>